# gpgraph-v2

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
crates/gpgraph-core/: Cargo.toml
crates/gpgraph-core/src/: codon.rs  hamming.rs  lib.rs
examples/streamlit/: README.md  requirements.txt  showcase.py
examples/streamlit/app_pages/: about.py  benchmarks.py  fixation_explorer.py  flux.py  graph_builder.py  intro.py
examples/streamlit/utils/: __init__.py
python/gpgraph/: __init__.py  _rust.pyi  base.py  exceptions.py  fixation.py  layout.py  neighbors.py  paths.py
python/gpgraph/pyplot/: __init__.py  draw.py  paths.py  primitives.py  utils.py
tests/: conftest.py
tests/benchmarks/: test_hamming_bench.py
tests/property/: test_hamming_invariants.py
tests/unit/: test_base.py  test_fixation.py  test_layout.py  test_neighbors.py  test_paths.py  test_pyplot.py
